<resources>
    <string name="app_name">CinnaMease</string>
    <string name="cinnamease">CinnaMease</string>
    <string name="hello_again">ආයුබෝවන්!</string>
    <string name="welcome_back_you_ve_been_missed">ආපසු සාදරයෙන් පිළිගනිමු! ඔබව නැවත දැකීම සතුටක්!</string>
    <string name="email">විද්යුත් තැපෑල</string>
    <string name="password">මුරපදය</string>
    <string name="sign_in">ලියාපදිංචි වන්න</string>
    <string name="or">Or</string>
    <string name="sign_in_with">පුරනය වන්න</string>
    <string name="don_t_have_an_account_sign_in">ගිණුමක් නැද්ද?</string>
    <string name="create_account">ගිණුම තනන්න</string>
    <string name="let_s_create_an_account_together">අපි එකට ගිණුමක් හදමු!</string>
    <string name="name">නම</string>
    <string name="email_sinup">විද්යුත් තැපෑල</string>
    <string name="password_signup">මුරපදය</string>
    <string name="sign_up">ලියාපදිංචි වන්න</string>
    <string name="or_signup">හෝ</string>
    <string name="sign_up_with">මෙහි ලියාපදිංචි වන්න</string>
    <string name="already_have_an_account">දැනටමත් ගිණුමක් තිබේද?</string>
    <string name="output_page">OutPut Page</string>]
    <string name="matured_yayy">Matured, Yayy!</string>
    <string name="scan_nav">අස්වනු පරීක්ෂාව</string>
    <string name="home_nav">විස්තර</string>
    <string name="history_nav">අපි ගැන</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_page_nav">අපි ගැන</string>
    <string name="scan_page_nav">Scan Page</string>
    <string name="home_page_nav">Welcome to the Cinnamease app!</string>
   <string name="cinnamon_info1">සාර්ථක කුරුඳු වගාවක් සහතික කිරීම සඳහා, ප්‍රශස්ත වර්ධනය වන තත්වයන් සැපයීම සහ හොඳම භාවිතයන් පිළිපැදීම අත්‍යවශ්‍ය වේ. සිටුවීම සඳහා හොඳින් ජලය බැස යන පස සහ ප්‍රමාණවත් හිරු එළිය සහිත ස්ථානයක් තෝරන්න. නිරෝගී වර්ධනයක් ප්‍රවර්ධනය කිරීම සඳහා පාංශු තෙතමනය නිතිපතා නිරීක්ෂණය කිරීම සහ අවශ්‍ය පරිදි ජලය දැමීම, විශේෂයෙන් වියළි කාලවලදී. ගස් පාමුල වසුන් යෙදීම වල් පැලෑටි මර්දනය කිරීමට සහ තෙතමනය රඳවා ගැනීමට උපකාරී වේ. ගස් ව්‍යුහය නඩත්තු කිරීම සහ වාතය ගලායාම ප්‍රවර්ධනය කිරීම, රෝග අවදානම අවම කිරීම සඳහා නිසි කප්පාදු කිරීම සහ පුහුණුව ඉතා වැදගත් වේ. පළිබෝධකයන් නිරීක්ෂණය කිරීම සහ හැකි විට ජීව විද්‍යාත්මක පාලනයන් භාවිතා කිරීම වැනි ඒකාබද්ධ පළිබෝධ කළමනාකරණ ශිල්පීය ක්‍රම, රසායනික පළිබෝධනාශක මත යැපීම අඩු කරන අතරම පළිබෝධ හානි අවම කිරීමට උපකාරී වේ. කෝණාකාර සහ පත්‍ර ලප වැනි රෝග සඳහා ගස් නිතිපතා පරීක්ෂා කරන්න, පැතිරීම වැළැක්වීම සඳහා බලපෑමට ලක් වූ ශාකවලට කඩිනමින් ප්‍රතිකාර කරන්න. මෙම ක්‍රමෝපායන් ක්‍රියාත්මක කිරීමෙන් සහ සුපරීක්ෂාකාරීව සිටීමෙන් වගාකරුවන්ට උපරිම අස්වැන්නක් ලබා ගත හැකි අතර උසස් තත්ත්වයේ කුරුඳු නිෂ්පාදනය කළ හැකිය.</string>
</resources>