<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="auto"
    android:orientation="vertical"

    android:padding="16dp">

    <TextView
        android:layout_width="411dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/create_account"
        android:textColor="@color/text_large"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/let_s_create_an_account_together"
        android:textColor="@color/text_large"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/email_sinup"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password_signup"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text_large"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/or_signup"
        android:textColor="@color/screen_bg"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="cursive"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/buttonSigIn1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:backgroundTint="@color/screen_bg"
            android:layout_marginStart="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/text_large"
            android:textSize="12dp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
