<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="411dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/hello_again"
        android:textColor="@color/text_large"
        android:textSize="37sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/welcome_back_you_ve_been_missed"
        android:textColor="@color/text_large"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="411dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/text_small"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/text_small"
        android:autofillHints="" />

    <TextView
        android:layout_width="411dp"
        android:layout_height="22dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/screen_bg"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/text_large"
        />

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/text_large"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Emp_4"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/don_t_have_an_account_sign_in"
            android:textColor="@color/two"
            android:textSize="16sp"
            android:textStyle="bold|italic" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/screen_bg"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/text_large"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
